Update and rename sample_config.env to config.env

--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "5443117889:AAGN-JMgWga5focldd_ZzRn9CDy4ihSts44"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 6733015
+API_HASH = "9b578d686a3909fa3d9bf559fef76124"
+OWNER_ID = 1266405048
+AUTH_CHANNEL = "-1001707318466" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
